2003-08-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/PaperMenu.py: Add A3 size to the default size list.

2003-08-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: set menu title

2003-08-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/template.po: Update the translation template.

2003-08-07  Lars Kr. Lundin  <gramps@lklundin.dk>
	* src/plugins/BookReport.py: Fixed typo (containg).
	* src/plugins/FtmStyleAncestors.py, src/plugins/FtmStyleDescendants.py:
	Fixed typo (death_endotes).

2003-08-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FamilyView.py (load_family): Enable translation for family
	relation. 
	* src/const.py.in: Add new functions: display_event(), save_event(), 
	display_attr(), and save_attr() which work for either personal or 
	family events/attributes. Correct silly typo. 
	* src/WriteXML.py (dump_my_event): Call const.save_event() before 
	saving; (write_family_id): Call const.save_frel() before saving; 
	(write_attribute_list): Call const.save_attr() before saving.
	* src/Marriage.py (redraw_event_list): Call const.display_fevent()
	before saving; (on_add_clicked): change const.save_fevent() to 
	const.display_fevent(); (on_event_update_clicked): Likewise. 
	* src/EventEdit.py (EventEditor.__init__): Call self.trans() before
	displaying event name. 
	* src/EditPerson.py (did_data_change): Add a unicode conversion to the
	surname string. 

2003-08-05  Tim Waugh  <twaugh@redhat.com>
	* src/Report.py, src/TextDoc.py, src/DrawDoc.py: Adjusted the way
	that 'Print Report' is handled.
	* src/docgen/OpenOfficeDoc.py, src/docgen/PSDrawDoc.py: Likewise.
	* src/plugins/AncestorChart.py: Undo previous change to do with
	printing reports.

2003-08-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/GraphViz.py (make_doc_menu): Add paper option to the menu.
	* src/GenericFilter.py: Fixes for existing filters (ancestors and
	descendants used to include the original person). 